// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components:checkup:AnswerBlock:ResponseButton:Button matches the snapshot for type No 1`] = `
<button
  className="sc-bdVaJa qOFnr"
  type="No"
>
  No
</button>
`;

exports[`components:checkup:AnswerBlock:ResponseButton:Button matches the snapshot for type Not sure 1`] = `
<button
  className="sc-bdVaJa gDtnQp"
  type="Not sure"
>
  Not sure
</button>
`;

exports[`components:checkup:AnswerBlock:ResponseButton:Button matches the snapshot for type Yes 1`] = `
<button
  className="sc-bdVaJa eFNFOG"
  type="Yes"
>
  Yes
</button>
`;
